[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Gnop/Ball.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.860465 )
colors = PoolColorArray( 1, 1, 1, 0.392157, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0148052, 0, 0, Vector2( 0.526316, 0.543182 ), -1.38182, -1.80699, 0, 0, Vector2( 1, 0 ), -0.130253, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[node name="Ball" type="KinematicBody2D" groups=[
"Ball",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 32
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="WinLose" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="checkball" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
[connection signal="timeout" from="WinLose" to="." method="_on_WinLose_timeout"]
[connection signal="timeout" from="checkball" to="." method="_on_checkball_timeout"]
